rtpbin: unitialized value
This is a regression since b5e414cd in
gst_rtp_bin_handle_message()
guint64 last_out;
/* Not called, therefore last_out not initialize */
if (g_signal_lookup ("set-active", G_OBJECT_TYPE (element)) != 0) {
g_signal_emit_by_name (element, "set-active", active, offset,
&last_out);
}
if (!active) {
g_object_get (element, "percent", &stream->percent, NULL);
/* Using unitialized last_out */
if (last_out == -1)
last_out = 0;
if (min_out_time == -1 || last_out < min_out_time)
min_out_time = last_out;
}
The problem is that last_out
ends up being unitialized if the set-active
signal is not emitted. I'm not sure what value should be used.
(See CID 1455443)
Edited by Edward Hervey